--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,9 @@ dependencies:
   provider:
   introduction_screen:
   shared_preferences:
-
+  url_launcher:
+  share_plus:
+  local_auth:
 
 dev_dependencies:
   flutter_test:
